--- a/public/index.html
+++ b/public/index.html
@@ -6,24 +6,24 @@
     <title>Welcome to Firebase Hosting</title>
 
     <!-- update the version number as needed -->
-    <script defer src="/__/firebase/9.23.0/firebase-app-compat.js"></script>
+    <script  src="/__/firebase/9.23.0/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/9.23.0/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/9.23.0/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/9.23.0/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/9.23.0/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/9.23.0/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/9.23.0/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/9.23.0/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/9.23.0/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/9.23.0/firebase-performance-compat.js"></script>
+    <script  src="/__/firebase/9.23.0/firebase-auth-compat.js"></script>
+    <script  src="/__/firebase/9.23.0/firebase-database-compat.js"></script>
+    <script  src="/__/firebase/9.23.0/firebase-firestore-compat.js"></script>
+    <script  src="/__/firebase/9.23.0/firebase-functions-compat.js"></script>
+    <script  src="/__/firebase/9.23.0/firebase-messaging-compat.js"></script>
+    <script  src="/__/firebase/9.23.0/firebase-storage-compat.js"></script>
+    <script  src="/__/firebase/9.23.0/firebase-analytics-compat.js"></script>
+    <script  src="/__/firebase/9.23.0/firebase-remote-config-compat.js"></script>
+    <script  src="/__/firebase/9.23.0/firebase-performance-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
     -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+    <script  src="/__/firebase/init.js?useEmulator=true"></script>
 
     <style media="screen">
       body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
@@ -41,84 +41,112 @@
     </style>
   </head>
   <body>
-    <div id="message">
-      <h2>takoyaki3-Auth</h2>
-      <h1 id="welcome-message">Firebase Hosting Setup Complete</h1>
-      <p id="user-status">You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-      <div id="firebaseui-auth-container"></div>
+    <div id="app">
+      <div id="message">
+        <h2>takoyaki3-Auth</h2>
+        <h1>{{status}}</h1>
+        <p>{{text}}</p>
+        <textarea v-show="isSignIn" v-model="jwt" style="width: 100%;"></textarea>
+        <a v-show="isSignIn" href="#" v-on:click="signOut">Sign Out</a>
+        <div id="firebaseui-auth-container"></div>
+      </div>
+      <p id="load">Firebase SDK Loading&hellip;</p>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
 
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        const userStatusEl = document.querySelector('#user-status');
-        const welcomeMessageEl = document.querySelector('#welcome-message');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+const { createApp, ref } = Vue
+const vue = createApp({
+  data(){
+    return {
+      status:'サインインしてください',
+      text:"You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!",
+      jwt:"hello",
+      isSignIn:false,
+    }
+  },
+  mounted(){
+    const loadEl = document.querySelector('#load');
+    // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+    // // The Firebase SDK is initialized and available here!
+    //
+    // firebase.auth().onAuthStateChanged(user => { });
+    // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
+    // firebase.firestore().doc('/foo/bar').get().then(() => { });
+    // firebase.functions().httpsCallable('yourFunction')().then(() => { });
+    // firebase.messaging().requestPermission().then(() => { });
+    // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
+    // firebase.analytics(); // call to activate
+    // firebase.analytics().logEvent('tutorial_completed');
+    // firebase.performance(); // call to activate
+    //
+    // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
 
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
+    try {
+      let app = firebase.app();
+      let features = [
+        'auth', 
+        'database', 
+        'firestore',
+        'functions',
+        'messaging', 
+        'storage', 
+        'analytics', 
+        'remoteConfig',
+        'performance',
+      ].filter(feature => typeof app[feature] === 'function');
+      loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
 
-          firebase.auth().onAuthStateChanged(user => {
-            if (user) {
-              firebase.auth().currentUser.getIdToken(/* forceRefresh */ true).then(function(idToken) {
-                // Send token to your backend via HTTPS
-                // ...
-                // User is signed in
-                welcomeMessageEl.textContent = 'サインイン済み';
-                userStatusEl.textContent = `ようこそ、${user.email}さん！ JWT:${idToken}`;
-              }).catch(function(error) {
-                // Handle error
-              });
-            } else {
-              let uiConfig = {
-                callbacks: {
-                  signInSuccessWithAuthResult: function () {
-                    return true;
-                  },
-                },
-                signInOptions: [
-                  firebase.auth.EmailAuthProvider.PROVIDER_ID,
-                  firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-                ],
-                signInSuccessUrl: './',
-              };
-      
-              let ui = new firebaseui.auth.AuthUI(firebase.auth());
-              ui.start('#firebaseui-auth-container', uiConfig);
-            }
+      firebase.auth().onAuthStateChanged(user => {
+        if (user) {
+          firebase.auth().currentUser.getIdToken(/* forceRefresh */ true).then(function(idToken) {
+            // Send token to your backend via HTTPS
+            // ...
+            // User is signed in
+            vue.status = 'サインイン済み';
+            vue.text = `ようこそ、${user.email}さん！`;
+            vue.jwt = idToken;
+            vue.isSignIn = true;
+          }).catch(function(error) {
+            // Handle error
           });
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
+        } else {
+          let uiConfig = {
+            callbacks: {
+              signInSuccessWithAuthResult: function () {
+                return true;
+              },
+            },
+            signInOptions: [
+              firebase.auth.EmailAuthProvider.PROVIDER_ID,
+              firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+            ],
+            signInSuccessUrl: './',
+          };
+  
+          let ui = new firebaseui.auth.AuthUI(firebase.auth());
+          ui.start('#firebaseui-auth-container', uiConfig);
         }
       });
+    } catch (e) {
+      console.error(e);
+      loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
+    }
+  },
+  methods:{
+    signOut(){
+      firebase.auth().signOut().then(() => {
+        // Sign-out successful.
+        vue.status = "サインインしてください"
+        vue.text = ""
+        vue.jwt = ""
+        vue.isSignIn = false
+      }).catch((error) => {
+        // An error happened.
+      });
+    }
+  }
+}).mount('#app')
     </script>
   </body>
 </html>
