--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
     <script  src="/__/firebase/9.23.0/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
     <script  src="/__/firebase/9.23.0/firebase-auth-compat.js"></script>
-    <script  src="/__/firebase/9.23.0/firebase-database-compat.js"></script>
-    <script  src="/__/firebase/9.23.0/firebase-firestore-compat.js"></script>
-    <script  src="/__/firebase/9.23.0/firebase-functions-compat.js"></script>
-    <script  src="/__/firebase/9.23.0/firebase-messaging-compat.js"></script>
-    <script  src="/__/firebase/9.23.0/firebase-storage-compat.js"></script>
+    <!-- <script  src="/__/firebase/9.23.0/firebase-database-compat.js"></script> -->
+    <!-- <script  src="/__/firebase/9.23.0/firebase-firestore-compat.js"></script> -->
+    <!-- <script  src="/__/firebase/9.23.0/firebase-functions-compat.js"></script> -->
+    <!-- <script  src="/__/firebase/9.23.0/firebase-messaging-compat.js"></script> -->
+    <!-- <script  src="/__/firebase/9.23.0/firebase-storage-compat.js"></script> -->
     <script  src="/__/firebase/9.23.0/firebase-analytics-compat.js"></script>
-    <script  src="/__/firebase/9.23.0/firebase-remote-config-compat.js"></script>
-    <script  src="/__/firebase/9.23.0/firebase-performance-compat.js"></script>
+    <!-- <script  src="/__/firebase/9.23.0/firebase-remote-config-compat.js"></script> -->
+    <!-- <script  src="/__/firebase/9.23.0/firebase-performance-compat.js"></script> -->
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
     <!-- 
