ログインメッセージを変更

--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,10 @@ const { createApp } = Vue
 const vue = createApp({
   data(){
     return {
-      status:'サインインしてください',
-      text:"You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!",
-      jwt:"hello",
-      isSignIn:false,
+      status: 'サインインが必要です',
+      text: "サービスを利用するには、サインインしてください。",
+      jwt: "",
+      isSignIn: false,
     }
   },
   mounted(){
